--- a/tweets-app/package.json
+++ b/tweets-app/package.json
@@ -2,6 +2,7 @@
   "name": "tweets-app",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://api.twitter.com",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -13,7 +14,10 @@
     "antd": "^4.3.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "typescript": "^3.7.5"
   },
   "scripts": {
@@ -36,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-redux": "^7.1.9"
   }
 }
